--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-# Configurações do H2 Database
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
 spring.h2.console.enabled=true
 
-# Configurações do JPA
 spring.jpa.hibernate.ddl-auto=update
+
+api.security.token.secret=${JWT_SECRET:my-secret-key}
